--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,5 +44,16 @@
   },
   "ignorePatterns": [
     "components/ui/**"
+  ],
+  // Issue: https://github.com/typescript-eslint/typescript-eslint/blob/1cf9243/docs/getting-started/linting/FAQ.md#i-get-errors-from-the-no-undef-rule-about-global-variables-not-being-defined-even-though-there-are-no-typescript-errors
+  "overrides": [
+    {
+      "files": [
+        "*.ts"
+      ],
+      "rules": {
+        "no-undef": "off"
+      }
+    }
   ]
 }
