--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
   "overrides": [
     {
       "files": [
-        "*.ts"
+        "*.ts",
+        "*.tsx"
       ],
       "rules": {
         "no-undef": "off"
