--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "bcryptjs": "^2.4.3",
+    "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cm6-theme-basic-dark": "^0.2.0",
@@ -29,6 +30,7 @@
     "mongoose": "^8.8.4",
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
@@ -54,7 +56,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
