--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.9",
     "@hookform/resolvers": "^3.10.0",
-    "@mdxeditor/editor": "^3.20.0",
+    "@mdxeditor/editor": "^3.21.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -18,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "ai": "^4.1.34",
     "bcryptjs": "^2.4.3",
     "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -27,7 +29,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "lucide-react": "^0.473.0",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.10.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-mdx-remote": "^5.0.0",
