--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.16.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
