--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "ai": "^4.1.34",
     "bcryptjs": "^2.4.3",
@@ -61,6 +62,7 @@
     "eslint-config-next": "15.1.6",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.16.2",
+    "eslint-plugin-promise": "^7.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
